--- a/css/login.css
+++ b/css/login.css
@@ -21,7 +21,7 @@ fieldset {
     box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
    background-color: white; /* Its background should be white */
     padding: 1em;/* There must be 1em between the content and the border of this element */
-    border: 0;/* It should have no border */
+    border: none;/* It should have no border */
 }
 
 .width-80 {
@@ -31,7 +31,8 @@ fieldset {
 
 .form-group {
   width: 100%; /* This element must use 100% of the width */
-    padding: .5em; /* It should have a separation of .5em from elements on top of it and below it*/
+    margin-top: .5em;
+    margin-bottom: .5em;/* It should have a separation of .5em from elements on top of it and below it*/
 }
 
 .form-label {
@@ -39,23 +40,24 @@ fieldset {
 }
 
 .form-control {
-   margin: 4px; /* There must be 4px on top of the text and below the text of an input with this class */
-    padding: .5em;/* It should have a separation of .5em from elements on top of it and below it */
-
-    /* You'll need to use the `calc` function to make the width of this element match the width of the button */
-    /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
+   padding: 4px 0;/* There must be 4px on top of the text and below the text of an input with this class */
+   /* It should have a separation of .5em from elements on top of it and below it */ /* You'll need to use the `calc` function to make the width of this element match the width of the button */
+   margin: .5em 0;
+    width: calc(100% - 4px);
+    )/* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Calculate based on the padding of the `.btn` class */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: 100%;
+
 }
 
 .btn {
-    /* There must be a separation of 8px between the text and the border of this element */
-    /* The text color of this element should be white and bold */
-    /* The border of this element should be 1px, and its color should be light grey */
+   padding: 8px; /* There must be a separation of 8px between the text and the border of this element */
+    color: white;
+    font-weight: bold;/* The text color of this element should be white and bold */
+    border: 1px solid lightgrey;/* The border of this element should be 1px, and its color should be light grey */
     background-color: #0fb784;
 }
 
 .btn-block {
-    /* This element should use 100% of the width */
+    width: 100%;/* This element should use 100% of the width */
 }
