--- a/css/twitter.css
+++ b/css/twitter.css
@@ -29,6 +29,7 @@ a {
     background: var(--light-bg);
     position: fixed;
     width: 100%;
+    z-index: 1000;
 }
 .nav {
     list-style-type: none;
@@ -36,6 +37,7 @@ a {
     margin: 0;
 }
 .nav-item {
+    display: inline-block;
     padding: 1.5em
 }
 .nav-link {
@@ -48,6 +50,15 @@ a {
 }
 .profile {
     background: var(--light-bg);
+    height: 80px;
+}
+.profile-image {
+    position: absolute;
+    top: 235px;
+}
+.profile-form {
+    float: right;
+    line-height: 85px;
 }
 .btn {
     border: 1px solid var(--main-link-color);
@@ -70,4 +81,19 @@ a {
 }
 .text-muted {
     color: var(--main-link-color);
+}
+.profile-details {
+    float: left;
+    width: 25%;
+    margin: 0 .5em;
+}
+.timeline {
+    float: left;
+    width: 50%;
+    margin: 0 .5em;
+}
+.who-to-follow {
+    float: left;
+    width: 25%;
+    margin: 0 .5em;
 }
