--- a/css/twitter.css
+++ b/css/twitter.css
@@ -84,16 +84,42 @@ a {
 }
 .profile-details {
     float: left;
-    width: 25%;
     margin: 0 .5em;
+    width: calc(25% - 1em);
 }
 .timeline {
     float: left;
-    width: 50%;
     margin: 0 .5em;
+    width: calc(50% - 1em);
 }
 .who-to-follow {
     float: left;
-    width: 25%;
     margin: 0 .5em;
+    width: calc(25% - 1em);
+}
+.container {
+    margin: 2em;
+}
+.media {
+    width: 100%;
+    background-color: var(--light-bg);
+    border-bottom: 1px solid var(--separator-color);
+    padding: .5em;
+    overflow: auto;
+}
+.media-image {
+    float: left;
+    width: 50px;
+    margin-top: 1.33em;
+}
+.media-body {
+    float: left;
+    width: calc(100% - 50px);
+}
+.profile-entry {
+    margin: .5em;
+}
+.profile-items {
+    padding: 0;
+    list-style-type: none;
 }
