--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -33,18 +33,20 @@ h2, h3 {
     background: white;
     padding: 1em;
     margin: 0 auto;
-    justify-content: space-between;/* enter needed declarations here */
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;/* enter needed declarations here */
 }
 
 section {
    display: flex;
+    align-items: center;
 }
 
 section:nth-of-type(1) {
     height: 3em;
     background: lightgreen;
     margin-bottom: 10px;
-    align-items: center;
     justify-content: space-between; /* enter needed declarations here */
 }
 section:nth-of-type(1) div:last-child {
@@ -74,7 +76,7 @@ section:nth-of-type(1) div:last-child {
 }
 
 section:nth-of-type(3) {
-   align-items: center; /* enter needed declarations here */
+   justify-content: flex-end; /* enter needed declarations here */
 }
 
 section:nth-of-type(3) h3 {
@@ -116,8 +118,7 @@ section:nth-of-type(6) {
     background: coral;
     height: 14em;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;/* enter needed declarations here */
+    justify-content: space-between; /* enter needed declarations here */
 }
 
 .grey-box {
