--- a/css/flexbox-cards.css
+++ b/css/flexbox-cards.css
@@ -68,9 +68,10 @@ a {
 .container {
 
  display: flex;
+    align-items: center;
    /* This is a flex container */
 }
 
 .card {
-    /* This is a flex item */
+  margin: 15px;  /* This is a flex item */
 }
