--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -58,10 +58,8 @@ body {
 }
 .flex-form {
     display: flex;
-    justify-content: center;
-    align-items: center;/* flex items */
+    /* flex items */
 }
 .destination {
-    justify-content: center;
-    align-items: center;/* bigger item */
+   flex-basis: 30%/* bigger item */
 }
