css grid layout 1 done

--- a/css/streaming-player-ui.css
+++ b/css/streaming-player-ui.css
@@ -12,7 +12,7 @@ body {
 
 .wrapper {
     display: grid;/* TODO: make the wrapper a grid container */
-    grid-template-columns: 50% 400px 400px 400px 50%;/* TODO: define five columns where the middle three columns are 400px and the outer columns fill the remaining space */
+    grid-template-columns: 20% 400px 400px 400px 20%;/* TODO: define five columns where the middle three columns are 400px and the outer columns fill the remaining space */
     grid-gap: 2em;/* TODO: add a gap of 1em around all grid items */
     /* no row properties are needed */
     height: 100vh;/* TODO: the height of the wrapper should be 100 viewport height units */
@@ -35,7 +35,7 @@ nav {
 
 main {
     grid-area: 2 / 3 / 3 / 5;/* TODO: define the grid area of main such that it takes up the columns 3 and 4 of the second row  */
-    display: grid;/* TODO: make main a grid container as well */
+    display: inline-grid;/* TODO: make main a grid container as well */
     grid-template-columns: repeat(3, 33.33%);
     grid-column-gap: 1em;/* TODO: define main to contain three columns that together take up equally the full width of main and have a 1em gap between grid items */
     overflow: auto;
@@ -52,7 +52,7 @@ header a {
 
 header ul li:nth-of-type(2) {
     /* TODO: uncomment the next line and add a value which causes Flexbox to automatically fill in extra space on it's left side */
-    /*margin-left: ;*/
+    margin-left: auto;
     border-right: 1px solid white;
 }
 
