--- a/css/css-grid-layout-2.css
+++ b/css/css-grid-layout-2.css
@@ -8,7 +8,7 @@ main {
     margin: 0;
     background: black;
     display: grid;
-    grid-template-rows: repeat(4, 273%);
+    grid-template-rows: repeat(5, 165%);
     grid-template-columns: repeat(4, 25%);
 
 }
@@ -18,21 +18,21 @@ main div {
 }
 .head {
     grid-area: 1 / 1 / 2 / 5;
-    background-color: gold;
+    background-color: limegreen;
 }
 .nav {
     grid-area: 2 / 1 / 5 / 2;
-    background-color: gold;
+    background-color: limegreen;
 }
 .art {
-    grid-area: 2 / 2 / 4 / 4;
-    background-color: gold;
+    grid-area: 2 / 2 / 4 / 5;
+    background-color: limegreen;
 }
 .ads {
-    grid-area: 2 / 4 / 4 / 5;
-    background-color: gold;
+    grid-area: 4 / 2 / 5 / 5;
+    background-color: limegreen;
 }
 .foot {
-    grid-area: 4 / 2 / 5 / 5;
-    background-color: gold;
+    grid-area: 5 / 1 / 6/ 5;
+    background-color: limegreen;
 }
