--- a/css/css-grid-layout-3.css
+++ b/css/css-grid-layout-3.css
@@ -8,8 +8,8 @@ main {
     margin: 0;
     background: black;
     display: grid;
-    grid-template-rows: repeat(7, 95%);
-    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(7, 1fr);
+    grid-template-columns: repeat(4, 1fr);
 
 }
 main div {
