--- a/css/generic-web-layout.css
+++ b/css/generic-web-layout.css
@@ -6,55 +6,54 @@ body {
 }
 main {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(17, 1fr);
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(22, 1fr);
 }
 .nav {
     margin-top: 0;
     margin-bottom: 0;
-    grid-area: 1 / 1 / 2 / 9;
+    grid-area: 1 / 1 / 2 / 10;
     display: flex;
     background-color: black;
     color: white;
     align-items:  center;
 }
 .menu {
-    grid-area: 2 / 1 / 18 / 2;
+    grid-area: 2 / 1 / 23 / 2;
     background-color: whitesmoke;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     margin-top: 0;
 }
 .head {
-    grid-area: 2 / 2 / 3 / 6;
+    grid-area: 3 / 2 / 4 / 6;
 }
 .p1 {
-    grid-area: 3 / 2 / 5 / 6;
+    grid-area: 4 / 2 / 6 / 6;
 }
 .head1 {
-    grid-area: 5/ 2 / 6 / 6;
+    grid-area: 7 / 2 / 8 / 6;
 }
 .p2 {
-    grid-area: 6 / 2 / 8 / 6;
+    grid-area: 8 / 2 / 10/ 6;
 }
 .head2 {
-    grid-area: 8 / 2 / 9 / 6;
+    grid-area: 11 / 2 / 12 / 6;
 }
 .p3 {
-    grid-area: 9 / 2 / 11/ 6;
+    grid-area: 12 / 2 / 14/ 6;
 }
 li {
     list-style: none;
     text-decoration: none;
 }
 .foot {
-    grid-area: -4 / 2 / -2 / 9;
+    grid-area: 20 / 2 / 22 / 10;
     background-color: #848487;
     color: white;
 }
 .bot {
-    grid-area: -2 / 2 / -1 / 9;
+    grid-area: 22 / 2 / 23 / 10;
     background-color: black;
     color: white;
 }
@@ -75,26 +74,71 @@ h2 {
     color: mediumseagreen;
 }
 .ad1 {
-    grid-area: 2 / 7 / 3 / 9;
+    grid-area: 3 / 7 / 4 / 9;
+    border: 1px solid lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .ad2 {
-    grid-area: 3 / 7 / 5 / 9;
+    grid-area: 5 / 7 / 7 / 9;
+    border: 1px solid lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .ad3 {
-    grid-area: 7 / 7 / 8 / 9;
+    grid-area: 9 / 7 / 10 / 9;
+    border: 1px solid lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .ad4 {
-    grid-area: 8 / 7 / 10 / 9;
+    grid-area: 11 / 7 / 13 / 9;
+    border: 1px solid lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .ad5 {
-    grid-area: 11/ 7 / 12 / 9;
+    grid-area: 14/ 7 / 15 / 9;
+    border: 1px solid lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .ad6 {
-    grid-area: 12/ 7 / 14 / 9;
+    grid-area: 16/ 7 / 18 / 9;
+    border: 1px solid lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .page {
-    grid-area: -5 / 4 / -4 / 6;
+    grid-area: 19 / 4 / 20 / 6;
     display: flex;
     justify-content: space-around;
+}
+.smenu {
+    margin: 1em;
+    padding: 5px;
+}
+h2 {
+    margin-left: 1em;
+}
+p {
+    margin-left: 1em;
+}
+.num:hover {
+    color: white;
+    background-color: black;
+}
+.tnav:hover {
+    background-color: darkgray;
+}
+.smenu:hover {
+    color: white;
+    background-color: black;
 }
