--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -4,10 +4,11 @@
     box-sizing: border-box;
 }
 body {
+    height: 100vh;
     margin: 0;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(20, 3em);
+    grid-template-rows: repeat(20, 1fr);
     grid-gap: 2em;
     justify-content: center;
     align-items: center;
