--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -4,37 +4,22 @@
     box-sizing: border-box;
 }
 body {
+    margin: 5px;
     height: 100vh;
-    margin: 0;
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(20, 1fr);
-    grid-gap: 2em;
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: 20% 60% 20%;
+    grid-gap: 2px;
 }
-h1 {
-    grid-area: 2 / 1 / 3 / 2;
-    align-items: center;
-    justify-content: center;
-}
-.alert-info {
-    grid-area: 1 / 1 / 2 / 2;
-    align-items: center;
-    justify-content: center;
-}
-.nav-links {
-    grid-area: 3 / 1 / 8 / 2;
-    list-style: none;
-    justify-content: space-evenly;
-    align-items: center;
-}
-li>a {
+.alert-info-hidden-on-desktop {
+    background-color: powderblue;
+    border: 2px solid darkgray;
+    grid-area: 1 / 2 / 2 / 3;
     display: flex;
-    background-color: lightgrey;
-    padding: 5px;
-}
-.header-background {
-    grid-area: 9 / 1 / 13 / 2;
+    align-items: center;
+    justify-content: center;
 }
 
+.alert-info-hidden-on-desktop a:link {
+    color: black;
+}
