--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,4 +1,3 @@
-@media screen and (min-width:500px) {}
 
 * {
     box-sizing: border-box;
@@ -10,6 +9,19 @@ body {
     grid-template-rows: repeat(20, 1fr);
     grid-template-columns: 20% 60% 20%;
     grid-gap: 2px;
+}
+@media screen and (min-width:768px) {
+    .alert-info-hidden-on-desktop a:link {
+        color: black;
+    }
+    body {
+        margin: 5px;
+        height: 100vh;
+        display: grid;
+        grid-template-rows: repeat(20, 1fr);
+        grid-template-columns: 20% 60% 20%;
+        grid-gap: 2px;
+    }
 }
 .alert-info-hidden-on-desktop {
     background-color: powderblue;
