--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,37 +1,33 @@
-
 * {
     box-sizing: border-box;
 }
 body {
-    margin: 5px;
-    height: 100vh;
+    margin: 0;
     display: grid;
-    grid-template-rows: repeat(20, 1fr);
-    grid-template-columns: 20% 60% 20%;
-    grid-gap: 2px;
-}
-@media screen and (min-width:768px) {
-    .alert-info-hidden-on-desktop a:link {
-        color: black;
-    }
-    body {
-        margin: 5px;
-        height: 100vh;
-        display: grid;
-        grid-template-rows: repeat(20, 1fr);
-        grid-template-columns: 20% 60% 20%;
-        grid-gap: 2px;
-    }
-}
-.alert-info-hidden-on-desktop {
-    background-color: powderblue;
-    border: 2px solid darkgray;
-    grid-area: 1 / 2 / 2 / 3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-rows: 1fr;
 }
 
+.alert-info-hidden-on-desktop {
+    background-color: powderblue;
+    border: 1px solid gray;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    font-size: 40px;
+}
 .alert-info-hidden-on-desktop a:link {
     color: black;
+    text-decoration: none;
+}
+h1 {
+    text-align: center;
+}
+
+
+@media screen and (min-width:768px) {
+.alert-info-hidden-on-desktop {
+    display: none;
+}
+
 }
