--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,8 @@
 .jumbotron {
-    background: url("../img/pizza.png") no-repeat;
+    background: url("../img/pizza.png");
+}
+.display-4 {
+    background-color: whitesmoke;
+    opacity: .6;
+    text-align: center;
 }
