--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,33 +1,79 @@
-* {
-    box-sizing: border-box;
-}
-body {
+*{
+    font-family: sans-serif;
     margin: 0;
-    display: grid;
-    grid-template-columns: 10% 80% 10%;
-    grid-template-rows: 1fr;
+    padding: 0;
 }
+h1{
+    font-size: 4em;
+}
+h2, p{
+    margin: .5em;
+}
+.main{
+    margin-bottom: 3em;
+}
+p{
+    font-style: italic;
+}
+footer>p{
+    margin-top: 5em;
+}
+.sub-section{
+    font-size: .9em;
+}
+@media screen and (max-width:400px) {
 
-.alert-info-hidden-on-desktop {
-    background-color: powderblue;
-    border: 1px solid gray;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    font-size: 40px;
-}
-.alert-info-hidden-on-desktop a:link {
-    color: black;
-    text-decoration: none;
-}
-h1 {
-    text-align: center;
-}
+    h1{
+        text-align: center;
+        margin-bottom: 37px;
+    }
+    li{
+        box-sizing: border-box;
+        list-style: none;
+        background-color: lightgray;
+        justify-content: space-between;
+        text-align: center;
+        padding: 1em;
+        margin: 11px;
+        font-size: 25px;
+    }
+    img{
+        margin: 11px;
+        width: 95%;
+    }
 
+    .alert-info{
+        background-color: #b9ffeb;
+        border: 2px solid lightgray;
+        text-align: center;
+        margin: 11px;
+        padding: 1.5em;
+    }
+    .alert-info>a{
+        text-decoration: none;
+        color: black;
+        font-size: 20px;
 
-@media screen and (min-width:768px) {
-.alert-info-hidden-on-desktop {
-    display: none;
+    }
+
 }
+@media screen and (min-width: 401px) {
+    .hidden-on-desktop{
+        visibility: hidden;
+    }
+    h1{
+        position: absolute;
+        text-align: left;
+    }
+    li{
+        display: inline-block;
+        list-style: none;
+        padding: 1em;
 
+    }
+    ul{
+
+        float: right;
+
+    }
 }
