cleaned up code

--- a/css/github.css
+++ b/css/github.css
@@ -2,6 +2,7 @@
     background-color: black;
     font-size: 14px;
 }
+
 #greybox {
     border: 1px;
     height: 50px;
@@ -16,6 +17,7 @@
     font-weight: bold;
     text-decoration: red overline;
 }
+
 #greybox1 {
     border: 1px;
     height: 20px;
@@ -28,6 +30,7 @@
     font-size: 14px;
     font-weight: bold;
 }
+
 #whitebox {
     border: 1px solid gray;
     height: 50px;
@@ -37,18 +40,19 @@
     font-size: 12px;
     font-weight: bold;
 }
-a:visited { text-decoration: none; color:black; }
 
-
-
-
+a:visited {
+    text-decoration: none;
+    color: black;
+}
 
 
 #foot1 {
-    float:left;
+    float: left;
     font-size: 12px
 }
+
 #foot2 {
-    float:right;
+    float: right;
     font-size: 12px;
 }
