--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -26,8 +26,8 @@ body {
 .flex-form {
     z-index: 10;
     position: relative;
-    border:20px solid rgba(0,0,0,0.3);
-    border-radius:5px;
+    border: 20px solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
 }
 
 .flex-form > * {
@@ -51,15 +51,17 @@ body {
 
 /*flex solution*/
 .cover {
-  display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     /* flex container */
 }
+
 .flex-form {
     display: flex;
     /* flex items */
 }
+
 .destination {
-   flex-basis: 30%/* bigger item */
+    flex-basis: 30% /* bigger item */
 }
