--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -1,4 +1,6 @@
-* {box-sizing: border-box;}
+* {
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
@@ -7,7 +9,9 @@ body {
     font-family: Chalkboard, sans-serif;
 }
 
-h1 {text-align: center;}
+h1 {
+    text-align: center;
+}
 
 h2, h3 {
     padding: 0;
@@ -25,7 +29,9 @@ h2, h3 {
     width: 2em;
 }
 
-.border {border: 2px solid black;}
+.border {
+    border: 2px solid black;
+}
 
 .card {
     width: 400px;
@@ -35,11 +41,11 @@ h2, h3 {
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
-    flex-direction: column;/* enter needed declarations here */
+    flex-direction: column; /* enter needed declarations here */
 }
 
 section {
-   display: flex;
+    display: flex;
     align-items: center;
 }
 
@@ -49,8 +55,9 @@ section:nth-of-type(1) {
     margin-bottom: 10px;
     justify-content: space-between; /* enter needed declarations here */
 }
+
 section:nth-of-type(1) div:last-child {
-   align-self: flex-start /* enter needed declarations here */
+    align-self: flex-start /* enter needed declarations here */
 }
 
 .purple-box {
@@ -61,11 +68,11 @@ section:nth-of-type(1) div:last-child {
 }
 
 .purple-box:nth-of-type(1) {
-   flex-grow: 2; /* enter needed declarations here */
+    flex-grow: 2; /* enter needed declarations here */
 }
 
 .purple-box:nth-of-type(2) {
-   flex-grow: 1; /* enter needed declarations here */
+    flex-grow: 1; /* enter needed declarations here */
 }
 
 .blue-box {
@@ -76,11 +83,11 @@ section:nth-of-type(1) div:last-child {
 }
 
 section:nth-of-type(3) {
-   justify-content: flex-end; /* enter needed declarations here */
+    justify-content: flex-end; /* enter needed declarations here */
 }
 
 section:nth-of-type(3) h3 {
-   flex-grow: 1; /* enter needed declarations here */
+    flex-grow: 1; /* enter needed declarations here */
 
 }
 
@@ -96,7 +103,7 @@ section:nth-of-type(3) h3 {
     height: 5em;
     width: 5em;
     background: brown;
-   flex-grow: 1; /* enter needed declarations here */
+    flex-grow: 1; /* enter needed declarations here */
 }
 
 .large-brown-box:nth-of-type(2) {
@@ -104,7 +111,7 @@ section:nth-of-type(3) h3 {
 }
 
 section:nth-of-type(5) {
-    justify-content: space-evenly;/* enter needed declarations here */
+    justify-content: space-evenly; /* enter needed declarations here */
 }
 
 .yellow-box {
