--- a/css/grid-system.css
+++ b/css/grid-system.css
@@ -1,5 +1,6 @@
+
 body, html {
-    background-color: #F0F0F0;
+    background-color:#F0F0F0;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -16,7 +17,7 @@ body p, li {
 
 #selected {
     font-size: 14px;
-    margin-top: 100px;
+    margin-top:100px;
 }
 
 .container .header {
@@ -63,8 +64,8 @@ li.mini-icon, .featuredproj {
 }
 
 #page-title {
-    font-size: 48px;
-    padding-top: 15px;
+    font-size:48px;
+    padding-top:15px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -72,14 +73,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-bar {
-    padding: 0;
-    margin: 0;
+    padding:0;
+    margin:0;
 }
 
 .nav-bar li {
     list-style-type: none;
     display: inline;
-    padding: 5px;
+    padding:5px;
     text-decoration: none;
 }
 
@@ -88,7 +89,7 @@ a {
 }
 
 .img-left {
-    float: right;
+    float:right;
 }
 
 /*match each link to a different icon color*/
@@ -116,8 +117,8 @@ a:hover {
 .mini-icon {
     width: 18px;
     height: 18px;
-    border-radius: 50%;
-    display: inline-block;
+    border-radius:50%;
+    display:inline-block;
     font-family: 'Anton', sans-serif;
     font-size: 10px;
     line-height: 18px;
@@ -144,7 +145,7 @@ a:hover {
 }
 
 hr {
-    border-top: 3px solid grey;
+    border-top: 3px solid rgba(158, 158, 158, 0.19);
 }
 
 .img-thumbnail {
@@ -164,17 +165,17 @@ hr {
 .media-heading {
     font-size: 24px;
     font-weight: bold;
-    color: black;
+    color:black;
 }
 
 /*XS SCREEN - screen smaller than 768*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width:768px) {
+
 
 
     .icon-red, .icon-green {
         float: right;
     }
-
     .icon-orange, .icon-blue {
         float: left;
     }
@@ -190,9 +191,9 @@ hr {
 }
 
 /*SM SCREEN - screen bigger than 767 */
-@media screen and (min-width: 768px) {
+@media screen and (min-width:768px) {
     hr {
-        width: 95%;
+        width: 55%;
     }
 
 
@@ -207,14 +208,11 @@ hr {
 }
 
 /*MED SCREEN - screen bigger than 991*/
-@media screen and (min-width: 992px) {
+@media screen and (min-width:992px) {
     hr {
-        width: 95%;
+        width: 92%;
     }
 
-    .man {
-        height: 200px;
-    }
 
     .first-img {
         margin-left: 0;
@@ -234,9 +232,10 @@ hr {
         right: 8px;
     }
 
-    .col-md-4 {
+    .col-md-4{
         width: 31.333333%;
     }
+
 
 
     /*#last {*/
@@ -245,13 +244,9 @@ hr {
 }
 
 /*LARGE & XTRA LARGE - screen bigger than 1199*/
-@media screen and (min-width: 1200px) {
+@media screen and (min-width:1200px) {
     hr {
-        width: 95%;
-    }
-
-    .man {
-        height: 290px;
+        width:65%;
     }
 
     .first-img {
@@ -260,7 +255,7 @@ hr {
 
     #selected {
         text-align: left;
-        margin-left: 10px;
+        margin-left:10px;
     }
 
     p#last {
@@ -272,8 +267,8 @@ hr {
     /*#last {*/
     /*line-height: */
     /*}*/
+
     /*#last {*/
     /*text-align: right;*/
     /*}*/
 }
-
