--- a/css/grid-system.css
+++ b/css/grid-system.css
@@ -1,274 +1,348 @@
+/*
+    Constants
+*/
 
-body, html {
-    background-color:#F0F0F0;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    box-sizing: border-box;
+* {
+    background-color: #F0F0F0;
 }
+
+/*
+   basic set up with fonts and sizes
+*/
 
 body {
-    padding: 0;
-}
-
-body p, li {
     font-family: 'Abel', sans-serif;
+    background-color: #F0F0F0;
 }
 
-#selected {
-    font-size: 14px;
-    margin-top:100px;
-}
-
-.container .header {
-    padding: 0;
-    width: 100%;
-}
-
-.container {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-}
-
-#logo {
-    border-radius: 50%;
-    width: 105px;
-    position: relative;
-    bottom: 18px;
-}
-
-.row {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-li.mini-icon, .featuredproj {
-    margin-top: 10px;
-}
-
-.column {
-    width: 100%;
-}
-
-.header {
-    width: 100%;
-    height: 70px;
-    margin-top: 60px;
-    background-color: white;
-}
-
-.page-header {
-    margin: 0 auto;
-}
-
-#page-title {
-    font-size:48px;
-    padding-top:15px;
-}
-
-h1, h2, h3, h4, h5, h6 {
+h1 {
     font-family: 'Anton', sans-serif;
+    font-size: 64px;
 }
 
-.nav-bar {
-    padding:0;
-    margin:0;
+h2 {
+    font-family: 'Anton', sans-serif;
+    font-size: 48px;
 }
 
-.nav-bar li {
-    list-style-type: none;
-    display: inline;
-    padding:5px;
-    text-decoration: none;
+h3 {
+    font-family: 'Anton', sans-serif;
+    font-size: 40px;
 }
 
-a {
-    color: black;
+h4 {
+    font-family: 'Anton', sans-serif;
+    font-size: 32px;
 }
 
-.img-left {
-    float:right;
+h5 {
+    font-family: 'Anton', sans-serif;
+    font-size: 28px;
 }
 
-/*match each link to a different icon color*/
-a:hover {
-    text-decoration: none;
-    color: #00ABA9;
+/*
+   ul list item set to none
+*/
+
+ul {
+    list-style: none;
 }
 
-.icon {
-    width: 105px;
-    height: 105px;
-    border-radius: 50%;
-    border: 8px solid white;
-    margin: 10px auto;
+/*
+   horizontal line width reduced
+*/
+
+hr {
+    width: 75%;
+}
+
+/*
+   images sizes and borders classes set
+*/
+
+.project-img {
+    border: #E6E6E6 solid 10px;
+    border-radius: 5px;
+    width: 90%;
+    object-fit: cover;
+}
+
+.sidebar-img {
+    width: 100%;
+    object-fit: contain;
+}
+
+
+.img-flex {
+    width: 90%;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+/*
+   Button classes and designs
+*/
+
+.design-button {
     font-family: 'Anton', sans-serif;
     color: white;
-    line-height: 90px;
-    vertical-align: middle;
-}
-
-.mini-icon-container {
-    float: right;
-}
-
-.mini-icon {
-    width: 18px;
-    height: 18px;
-    border-radius:50%;
-    display:inline-block;
-    font-family: 'Anton', sans-serif;
-    font-size: 10px;
-    line-height: 18px;
-    vertical-align: middle;
-    float: left;
-    margin-right: 5px;
-}
-
-
-.red {
+    padding: 35px 27px;
+    border: white solid 5px;
+    border-radius: 53px;
     background-color: #E6563B;
 }
 
-.orange {
-    background-color: #F19B00;
+.develop-button {
+    font-family: 'Anton', sans-serif;
+    color: white;
+    padding: 35px 23px;
+    border: white solid 5px;
+    border-radius: 53px;
+    background-color: #E89E17;
 }
 
-.green {
-    background-color: #7CB06C;
+.support-button {
+    font-family: 'Anton', sans-serif;
+    color: white;
+    padding: 35px 22px;
+    border: white solid 5px;
+    border-radius: 53px;
+    background-color: #7DB06D;
 }
 
-.blue {
-    background-color: #00ABA9;
+.host-button {
+    font-family: 'Anton', sans-serif;
+    color: white;
+    padding: 35px 33px;
+    border: white solid 5px;
+    border-radius: 53px;
+    background-color: #04AAAA;
 }
 
-hr {
-    border-top: 3px solid rgba(158, 158, 158, 0.19);
+.button-margin {
+    margin: 10px;
 }
 
-.img-thumbnail {
-    background-color: #E6E6E6;
-    border: 15px solid #E6E6E6;
+/*
+   Logo and Nav Bar & xsmall setup
+*/
+
+.jumbotron {
+    background-color: white;
+    height: 55px;
+    margin-top: 32px;
+    text-align: center;
+    padding: 0;
 }
 
-.margin-imgs {
-    margin-top: 40px;
+.jumbotron img {
+    position: absolute;
+    transform: translate(-50px, -25px);
 }
 
-.media-object {
-    height: 80px;
-    width: 80px;
+.logo {
+    max-width: 105px;
+    max-height: 105px;
+    border-radius: 53px;
+    overflow: visible;
 }
 
-.media-heading {
-    font-size: 24px;
-    font-weight: bold;
-    color:black;
+.nav-bar {
+    margin: 0;
+    text-align: center;
 }
 
-/*XS SCREEN - screen smaller than 768*/
-@media screen and (max-width:768px) {
+.links-bar ul {
+    display: flex;
+    padding: 0 0 10px;
+    margin: 0;
+    justify-content: space-evenly;
+}
+
+.companyName {
+    font-size: 28px;
+}
+
+.hidden-xs {
+    visibility: hidden;
+}
+
+.hidden-s {
+    visibility: hidden;
+}
+
+.center-title {
+    text-align: center;
+}
+
+.center-sub-title {
+    margin-top: 1px;
+    text-align: center;
+}
+
+/*
+   Icons classes for Table and design
+*/
+
+.icon-table {
+    display: flex;
+}
+
+.table-fix {
+    padding: 0;
+}
+
+.icon-table li {
+    padding-right: 8px;
+}
+
+.design-icon {
+    padding-left: 6px;
+    padding-right: 6px;
+    border-radius: 9px;
+    font-size: 12px;
+    font-family: 'Anton', sans-serif;
+    background-color: #E6563B;;
+}
 
 
+.develop-icon {
+    padding-left: 6px;
+    padding-right: 6px;
+    border-radius: 9px;
+    font-size: 12px;
+    font-family: 'Anton', sans-serif;
+    background-color: #E89E17;
+}
 
-    .icon-red, .icon-green {
-        float: right;
+.support-icon {
+    padding-left: 6px;
+    padding-right: 6px;
+    border-radius: 9px;
+    font-size: 12px;
+    font-family: 'Anton', sans-serif;
+    background-color: #7DB06D;
+}
+
+.host-icon {
+    padding-left: 6px;
+    padding-right: 6px;
+    border-radius: 9px;
+    font-size: 12px;
+    font-family: 'Anton', sans-serif;
+    background-color: #04AAAA;
+}
+
+.center-t {
+    text-align: center;
+}
+
+.img-max-man {
+    max-height: 216px;
+}
+
+.large-nav-logo {
+    position: absolute;
+    transform: translate(-50px, -60px);
+    z-index: 100;
+}
+
+/*
+   media screens
+
+ Extra small devices (portrait phones, less than 576px)
+ No media query for `xs` since this is the default in Bootstrap
+
+ Small devices (landscape phones, 576px and up)
+ */
+
+@media screen and (min-width: 576px) {
+    .button-margin-left {
+        margin: 0;
     }
-    .icon-orange, .icon-blue {
-        float: left;
+
+    .button-margin-right {
+        margin: 0;
     }
 
+    .hidden-xs {
+        visibility: visible;
+    }
+
+    .hidden-s {
+
+    }
+
+    .links-bar ul {
+        display: flex;
+        padding: 18px 0 0;
+        margin: 0;
+        background-color: white;
+        justify-content: space-evenly;
+    }
+
+    .links-bar li {
+        background-color: white;
+    }
+
+    .logo {
+        top: 35px;
+    }
+
+    .companyName {
+        margin-bottom: 10px;
+    }
+
+    .img-max-man {
+        max-height: 150px;
+    }
+
+
+}
+
+/*
+   Medium devices (tablets, 768px and up)
+*/
+
+@media screen and (min-width: 768px) {
     hr {
-        display: none;
+        width: 90%;
     }
 
-    #selected {
-        text-align: center;
+    .hidden-s {
+        visibility: visible;
     }
 
-}
-
-/*SM SCREEN - screen bigger than 767 */
-@media screen and (min-width:768px) {
-    hr {
-        width: 55%;
-    }
-
-
-    .first-img {
-        margin-left: 0;
-    }
-
-    #selected {
-        text-align: center;
+    .img-max-man {
+        max-height: 132px;
     }
 
 }
 
-/*MED SCREEN - screen bigger than 991*/
-@media screen and (min-width:992px) {
-    hr {
-        width: 92%;
-    }
+/*
+   Large devices (desktops, 992px and up)
+*/
 
-
-    .first-img {
-        margin-left: 0;
-    }
-
-    .media-float {
-        float: left;
-    }
-
-    #selected {
+@media screen and (min-width: 992px) {
+    .center-t {
         text-align: left;
+        padding-left: 30px;
     }
 
-    p#last {
-        position: relative;
-        top: 95px;
-        right: 8px;
+    .img-max-man {
+        max-height: 180px;
     }
 
-    .col-md-4{
-        width: 31.333333%;
-    }
-
-
-
-    /*#last {*/
-    /*text-align: right;*/
-    /*}*/
 }
 
-/*LARGE & XTRA LARGE - screen bigger than 1199*/
-@media screen and (min-width:1200px) {
-    hr {
-        width:65%;
+/*
+   Extra large devices (large desktops, 1200px and up)
+*/
+
+@media screen and (min-width: 1200px) {
+    .img-max-man {
+        max-height: 216px;
     }
 
-    .first-img {
-        margin-left: 0;
-    }
-
-    #selected {
-        text-align: left;
-        margin-left:10px;
-    }
-
-    p#last {
-        position: relative;
-        top: 95px;
-        right: 8px;
-    }
-
-    /*#last {*/
-    /*line-height: */
-    /*}*/
-
-    /*#last {*/
-    /*text-align: right;*/
-    /*}*/
 }
