--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -4,3 +4,13 @@ body{
 .card-deck {
     color: whitesmoke;
 }
+#map {
+    /* the width and height may be set to any size */
+    width: 100%;
+    height: 400px;
+}
+
+img{
+    height: 150px;
+    width: 75px;
+}
